metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Account__c</fullName>
    <label>Current Billing Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>