metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Billing_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Term__c</fullName>
    <label>Current Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>