metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Per_Unit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_Per_Unit_ARR__c</fullName>
    <formula>(Current_ARR__c -  Current_Addons_ARR__c) / Current_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Per Unit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>