metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Primary_Contact_Email__c</fullName>
    <label>Current Primary Contact Email</label>
    <type>Email</type>
</CustomField>