metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Product__c</fullName>
    <label>Current Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>