metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Product_Edition_Label__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Edition_Label__c</fullName>
    <label>Current Product Edition Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>