metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Seats__c.field-meta.xml
<CustomField>
    <fullName>Current_Seats__c</fullName>
    <label>Current Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>