metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription_End_Date__c</fullName>
    <description>End of the current subscription as specified in the billing system.</description>
    <inlineHelpText>End of the current subscription as specified in the billing system.</inlineHelpText>
    <label>Current Subscription End Date</label>
    <type>Date</type>
</CustomField>