metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription_Start_Date__c</fullName>
    <label>Current Subscription Start Date</label>
    <type>Date</type>
</CustomField>