metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Success_Level__c</fullName>
    <label>Current Success Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Success_Levels</valueSetName>
    </valueSet>
</CustomField>