metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_TCV__c.field-meta.xml
<CustomField>
    <fullName>Current_TCV__c</fullName>
    <label>Current TCV</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>