metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Term__c</fullName>
    <inlineHelpText>Term of the current contract (the one being renewed) in months. 0 (zero) is for EVERGREEN subscriptions.</inlineHelpText>
    <label>Current Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>