metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/CurrentContractHasAutoRenewalClause__c.field-meta.xml
<CustomField>
    <fullName>CurrentContractHasAutoRenewalClause__c</fullName>
    <description>Indicates if the customer&apos;s last signed quote contained the auto-renewal clause and hence we can enforce auto-renewal.</description>
    <inlineHelpText>If the last signed contract/quote contained the AR clause, then set to YES and put a link to the document into the &quot;Previous Quote with AR Cluse&quot; field. If last signed quote did not have the AR clause or quote can&apos;t be located, then set to NO. Auto-Renewal is only possible if there is a previously signed contract/quote with an AR clause.</inlineHelpText>
    <label>Has Auto-Renewal Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>