metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Customer_Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Value__c</fullName>
    <description>Customer Sentiment question - business value. To be filled in for closed-won renewals.</description>
    <inlineHelpText>HAPPY WITH VALUE DELIVERED - Customer is happy with the business value delivered by our product/service.
HAS UNRESOLVED CONCERNS - Customer has important concerns/objections that haven&apos;t yet been resolved.</inlineHelpText>
    <label>Customer Business Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy with value delivered</fullName>
            </value>
            <value>
                <fullName>Has unresolved concerns</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>