metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Customer_Moving_Off_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Moving_Off_Product__c</fullName>
    <description>Customer Sentiment question - Is customer moving off the product? To be filled in for closed-won renewals.</description>
    <inlineHelpText>AT RISK - Customer indicated their intent to look for alternatives before next renewal or desire to stop using the product.
STARTED MOVING OFF PRODUCT- Customer has started actual steps to get off of our software (not just a threat).
STOPPED USING PRODUCT - Customer is no longer using our product or service.
NO - Customer is still using product and has NOT started moving off.</inlineHelpText>
    <label>Customer Moving Off Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
            <value>
                <fullName>Started moving off product</fullName>
            </value>
            <value>
                <fullName>No longer using product</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>