metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Customer_Sentiment_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment_Details__c</fullName>
    <description>Lets the ISR enter free form additional information for why they set customer sentiment to what it is.</description>
    <inlineHelpText>Explain your choices for Customer Business Value and Customer Moving Off Product.  IMPORTANT: If you selected AT RISK or STARTED MOVING OFF PRODUCT or HAS UNRESOLVED CONCERNS:  **PROVIDE EVIDENCE FOR YOUR CONCLUSION** - a link to a logged call or email or both.</inlineHelpText>
    <label>Customer Sentiment Details</label>
    <type>TextArea</type>
</CustomField>