metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Customer_Termination_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Termination_Deadline__c</fullName>
    <description>LAMBDA-60525 Formula field to calculate Customer Termination deadline based on the Renewal date and Customer Termination notice period</description>
    <formula>Renewal_Date__c - IF(ISNULL(Customer_Termination_Notice_Period__c),60,Customer_Termination_Notice_Period__c)</formula>
    <inlineHelpText>Deadline is calculated based on Renewal Date and Customer Termination Notice Period</inlineHelpText>
    <label>Customer Termination Deadline</label>
    <type>Date</type>
</CustomField>