metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Customer_Termination_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Customer_Termination_Notice_Period__c</fullName>
    <description>LAMBDA-60525 Field to capture number of days before renewal date the customer must notify of cancellation</description>
    <inlineHelpText>Specify the number of days before renewal date customer must notify of cancellation</inlineHelpText>
    <label>Customer Termination Notice Period</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>