metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Days_Until_Termination__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Termination__c</fullName>
    <formula>Customer_Termination_Deadline__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Termination Deadline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>