metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Deal_Desk_Substage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Substage__c</fullName>
    <description>Used by Deal Desk to manage their Pending stages</description>
    <inlineHelpText>Used by Deal Desk to manage their Pending stages</inlineHelpText>
    <label>Deal Desk Substage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Deal Desk</fullName>
            </value>
            <value>
                <fullName>Pending PO</fullName>
            </value>
            <value>
                <fullName>Pending NetSuite</fullName>
            </value>
            <value>
                <fullName>Pending Write Off</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed-Won (AWS MarketPlace)</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>