metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>LAMBDA-60439 field to capture outbound email domain from Salesforce. This will be used by email templates</description>
    <formula>Product_Configuration__r.Mailbox_Override__c</formula>
    <inlineHelpText>Calculated field that captures email domain from Product Configuration. Used by emails generated for renewals</inlineHelpText>
    <label>Domain</label>
    <type>Text</type>
</CustomField>