metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Dont_Update_from_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Dont_Update_from_Netsuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used when there is a problem with the Netsuite record and we don’t want the opp’s current fields to be updated</description>
    <inlineHelpText>Used when there is a problem with the Netsuite record and we don’t want the opp’s current fields to be updated</inlineHelpText>
    <label>Don&apos;t Update from Netsuite</label>
    <type>Checkbox</type>
</CustomField>