metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Draft_Renewal_Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Draft_Renewal_Subscription_Name__c</fullName>
    <label>Draft Renewal Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>