metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/DSR_Number__c.field-meta.xml
<CustomField>
    <fullName>DSR_Number__c</fullName>
    <description>Field migrated from IgniteTech: DSR Number</description>
    <inlineHelpText>Delivery Service Request</inlineHelpText>
    <label>DSR Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>