metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>Green: EB has reviewed savings report &amp; is aligned
||
Yellow: EB has not reviewed savings report or has open questions
||
Red: EB aware and unwilling to move forward</description>
    <inlineHelpText>Green: EB has reviewed savings report &amp; is aligned
||
Yellow: EB has not reviewed savings report or has open questions
||
Red: EB aware and unwilling to move forward</inlineHelpText>
    <label>Economic Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>