metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Einstein_Predicted_Score__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Predicted_Score__c</fullName>
    <label>Einstein Predicted Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>