metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Estimated_RightSpend_Savings__c.field-meta.xml
<CustomField>
    <fullName>Estimated_RightSpend_Savings__c</fullName>
    <description>The Estimated CloudFix RightSpend Savings</description>
    <inlineHelpText>The Estimated CloudFix RightSpend Savings</inlineHelpText>
    <label>Estimated RightSpend Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>