metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Exclude_from_Self_Serve__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Self_Serve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to specify if a Self-Serve opportunity needs to be excluded from Self-Serve</description>
    <inlineHelpText>Check this field to exclude this opportunity from the Self-Serve process</inlineHelpText>
    <label>Exclude from Self-Serve</label>
    <type>Checkbox</type>
</CustomField>