metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Exec_Sponsor_On_Call__c.field-meta.xml
<CustomField>
    <fullName>Exec_Sponsor_On_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field migrated from IgniteTech: Exec Sponsor On Call</description>
    <inlineHelpText>Field migrated from IgniteTech: Exec Sponsor On Call</inlineHelpText>
    <label>Exec Sponsor On Call</label>
    <type>Checkbox</type>
</CustomField>