metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Extensions_Granted__c.field-meta.xml
<CustomField>
    <fullName>Extensions_Granted__c</fullName>
    <description>LAMBDA-60440 numbers of times the extension has been granted on this opportunity</description>
    <inlineHelpText>Number of times extensions has been granted on this opportunity</inlineHelpText>
    <label>Extensions Granted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>