metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External System ID</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>