metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/External_Referrer__c.field-meta.xml
<CustomField>
    <fullName>External_Referrer__c</fullName>
    <label>External Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>