metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/First_Year_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Contract_Value__c</fullName>
    <description>ARR + one-time payments scheduled/completed during the first year of the subscription (such as payment for initial setup and etc).</description>
    <inlineHelpText>ARR + one-time payments scheduled/completed during the first year of the subscription (such as payment for initial setup and etc).</inlineHelpText>
    <label>First Year Contract Value</label>
    <summarizedField>OpportunityLineItem.First_Year_Line_Value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>