metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/First_Year_NRR__c.field-meta.xml
<CustomField>
    <fullName>First_Year_NRR__c</fullName>
    <description>Field migrated from IgniteTech: First Year NRR</description>
    <inlineHelpText>Field migrated from IgniteTech: First Year NRR</inlineHelpText>
    <label>First Year NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>