metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this opportunity is subject to floor pricing.</description>
    <inlineHelpText>Indicates if this opportunity is subject to floor pricing.</inlineHelpText>
    <label>Floor</label>
    <type>Checkbox</type>
</CustomField>