metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Floor_for_QS__c.field-meta.xml
<CustomField>
    <fullName>Floor_for_QS__c</fullName>
    <description>Temporary formula field to convert Floor__c checkbox to a Number value, which then be used in Quicksight reporting. This is a temporary field until Quicksight bug of retrieving checkbox field values correctly from salesforce reports.</description>
    <formula>if(Floor__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor_for_QS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>