metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google Click ID. Used for Google Ad click attribution</description>
    <inlineHelpText>Google Click ID. Used for Google Ad click attribution</inlineHelpText>
    <label>GCLID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>