metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Handled_by_BU__c.field-meta.xml
<CustomField>
    <fullName>Handled_by_BU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the opportunity is handled by BU. No approval process will happen to the quote.</description>
    <inlineHelpText>Check this field if the opportunity is handled by BU. No approval process will happen to the quote.</inlineHelpText>
    <label>Handled by BU</label>
    <type>Checkbox</type>
</CustomField>