metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>100 x COUNT([CSM Milestone Result where Status = Success]) / Total Applicable Milestones</description>
    <formula>Count_Success_CSM_Milestone_Results__c  /  Total_Applicable_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the percentage of successfully completed CSM milestones for the opportunity</inlineHelpText>
    <label>Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>