metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/High_Value_Opp__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Opp__c</fullName>
    <description>Identify high-value opportunities.</description>
    <formula>(Offer_ARR__c / CURRENCYRATE(Text( CurrencyIsoCode ))) &gt;= 100000 ||  (Current_ARR__c / CURRENCYRATE(Text( CurrencyIsoCode ))) &gt;= 100000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity ARR &gt;= 100,000.  We use Offer ARR to exclude the effect of the Auto-Renewals at List.</inlineHelpText>
    <label>High Value Opp</label>
    <type>Checkbox</type>
</CustomField>