metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/HubSpot_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_ID__c</fullName>
    <label>HubSpot ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>