metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Influitive_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Influitive_SF_ID__c</fullName>
    <description>Opportunity ID in the Influitive SFDC. For migration only and will be deleted later.</description>
    <externalId>true</externalId>
    <label>Influitive SF ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>