metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field migrated from IgniteTech: Installed</description>
    <inlineHelpText>Field migrated from IgniteTech: Installed</inlineHelpText>
    <label>Installed</label>
    <type>Checkbox</type>
</CustomField>