metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/IntAcct_ID__c.field-meta.xml
<CustomField>
    <fullName>IntAcct_ID__c</fullName>
    <externalId>true</externalId>
    <label>IntAcct ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>