metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Internal_Ready_for_Finalizing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ready_for_Finalizing_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically set by SF flow when the Ready for Finalizing Stage field is changed. We need to trigger a flow when the Ready for Finalizing Stage field changes, but if the field becomes true because of a change on the quote, the flow is not triggered, so, this field will be used to find out when this change happened.</description>
    <inlineHelpText>This field is automatically set by SF flow when the Ready for Finalizing Stage field is changed. We need to trigger a flow when the Ready for Finalizing Stage field changes, but if the field becomes true because of a change on the quote, the flow is not triggered, so, this field will be used to find out when this change happened.</inlineHelpText>
    <label>Internal Ready for Finalizing Stage</label>
    <type>Checkbox</type>
</CustomField>