metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Internal_Ready_for_Invoice_Request__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ready_for_Invoice_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically set by SF flow when the Ready for Invoice Ticket field is changed. TrayIO flows can’t be triggered on formula fields, so, this internal field serves to trigger trayIO flow to generate the invoice ticket on jira.</description>
    <inlineHelpText>This field is automatically set by SF flow when the Ready for Invoice Ticket field is changed. TrayIO flows can’t be triggered on formula fields, so, this internal field serves to trigger trayIO flow to generate the invoice ticket on jira.</inlineHelpText>
    <label>Internal Ready for Invoice Request</label>
    <type>Checkbox</type>
</CustomField>