metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/IqScore__c.field-meta.xml
<CustomField>
    <fullName>IqScore__c</fullName>
    <label>IQ Score</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>