metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Is_Support_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Support_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field migrated from IgniteTech: Is Support Expired</description>
    <inlineHelpText>Field migrated from IgniteTech: Is Support Expired</inlineHelpText>
    <label>Is Support Expired</label>
    <type>Checkbox</type>
</CustomField>