metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field set during an approval process that locks the record</description>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>