metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/IsOpportunityBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsOpportunityBypassed__c</fullName>
    <description>LAMBDA-62558 formula to check if validation was bypassed in last 5 seconds</description>
    <formula>BLANKVALUE(ValidationBypassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked if the record is temporarily unlocked 5 seconds ago</inlineHelpText>
    <label>IsOpportunityBypassed</label>
    <type>Checkbox</type>
</CustomField>