metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Last_Renewal_Opp__c.field-meta.xml
<CustomField>
    <fullName>Last_Renewal_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This linked Opp is the last Closed Won renewal opp that identified that the customer is unhappy and at risk to churn</description>
    <inlineHelpText>This is the latest renewal that revealed the customer sentiment that they are considering cancelling next renewal</inlineHelpText>
    <label>Last Renewal Opp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Last Renewal Opp)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>