metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Last_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_URL__c</fullName>
    <description>LAMBDA-65516 URL of the last survey sent related to this opportunity</description>
    <inlineHelpText>Invitation of the survey last sent on this opportunity</inlineHelpText>
    <label>Last Survey URL</label>
    <type>Url</type>
</CustomField>