metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Last_Year_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Annual_Amount__c</fullName>
    <label>Last Year Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>