metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Late_Status__c.field-meta.xml
<CustomField>
    <fullName>Late_Status__c</fullName>
    <description>ISRs are required to notate the reason an opportunity is running or was late.</description>
    <inlineHelpText>If the the opportunity is late, note the reason in this field and provide the expected close date.</inlineHelpText>
    <label>Late Status</label>
    <type>TextArea</type>
</CustomField>