metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Latest_License_Extension_Commited_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_License_Extension_Commited_Date__c</fullName>
    <description>LAMBDA-60440 this field is required to store the date for license extension requested by the sales rep</description>
    <inlineHelpText>Latest License Extension date</inlineHelpText>
    <label>Latest License Extension Commited Date</label>
    <type>Date</type>
</CustomField>