metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/List_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Total__c</fullName>
    <description>Sum List Total from Opportunity Products where Total Price &gt; 0</description>
    <inlineHelpText>Sum List Total from Opportunity Products where Total Price &gt; 0</inlineHelpText>
    <label>List Total</label>
    <summarizedField>OpportunityLineItem.List_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.TotalPrice</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>