metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <inlineHelpText>What happened?  See Loss Reason - Why to note any additional reasons WHY it happened?</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Acquired</fullName>
                <label>Company Acquired/Tech Stack Consolidation</label>
            </value>
            <value>
                <fullName>Contract Terms &amp; Conditions</fullName>
                <label>Contract terms &amp; conditions</label>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Finance Action</fullName>
            </value>
            <value>
                <fullName>Inactive Account</fullName>
            </value>
            <value>
                <fullName>Lack of ROI</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Min seats is too high</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Not Using Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Pre-Import</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Product Issues</fullName>
            </value>
            <value>
                <fullName>Product Shutdown</fullName>
            </value>
            <value>
                <fullName>Professional Services Issues</fullName>
            </value>
            <value>
                <fullName>Project Postponed/Canceled</fullName>
            </value>
            <value>
                <fullName>Sales/Billing Issues</fullName>
            </value>
            <value>
                <fullName>Security Review Failure</fullName>
            </value>
            <value>
                <fullName>Support issues</fullName>
            </value>
            <value>
                <fullName>Handled by the BU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>