metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Loss_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Notes__c</fullName>
    <description>Loss reason detailed notes populated by sales when an opportunity is Closed Lost</description>
    <inlineHelpText>Loss reason detailed notes populated by sales when an opportunity is Closed Lost</inlineHelpText>
    <label>Loss Reason Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>